fix: jodit-react

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"rte"
 	],
 	"dependencies": {
-		"jodit": "^4.2.43"
+		"jodit": "git+https://github.com/detatsatrio/jodit.git"
 	},
 	"peerDependencies": {
 		"react": "~0.14 || ^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
